le volant marche
git-svn-id: svn+ssh://svn.code.sf.net/p/wifibotmag/code@20 09b3a849-49b2-4443-bea4-b0714686713c

--- a/gamepad/Makefile
+++ b/gamepad/Makefile
@@ -7,7 +7,7 @@ EXEC		= $(notdir $(shell pwd))
 CXX			= g++
 STANDARD	= -std=c++11
 CFLAGS		= -Wall -pedantic -Wextra 
-LDFLAGS		= 
+LDFLAGS		= -lSDL -lpthread
 
 OBJ_DIR     = obj
 DEPENDS		= .depends
